RESOLVED FIXED Bug 234740
[GTK][a11y] Defer the emission of AddAccessible signal with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=234740
Summary [GTK][a11y] Defer the emission of AddAccessible signal with ATSPI
Carlos Garcia Campos
Reported 2021-12-29 07:09:02 PST
In case of node added and removed quickly, we just avoid the emission of the signal.
Attachments
Patch (11.07 KB, patch)
2021-12-29 07:17 PST, Carlos Garcia Campos
no flags
Patch (11.22 KB, patch)
2021-12-30 03:15 PST, Carlos Garcia Campos
no flags
Patch (12.32 KB, patch)
2021-12-30 05:30 PST, Carlos Garcia Campos
no flags
Patch (12.35 KB, patch)
2021-12-30 06:12 PST, Carlos Garcia Campos
no flags
Patch (19.00 KB, patch)
2022-01-12 01:47 PST, Carlos Garcia Campos
aperez: review+
aperez: commit-queue-
Carlos Garcia Campos
Comment 1 2021-12-29 07:17:00 PST
Carlos Garcia Campos
Comment 2 2021-12-30 03:15:33 PST
Carlos Garcia Campos
Comment 3 2021-12-30 05:30:29 PST
Carlos Garcia Campos
Comment 4 2021-12-30 06:12:24 PST
Adrian Perez
Comment 5 2022-01-11 06:29:54 PST
This needs a rebase now that the patch for bug #234737 has landed =)
Carlos Garcia Campos
Comment 6 2022-01-11 08:48:39 PST
(In reply to Adrian Perez from comment #5) > This needs a rebase now that the patch for bug #234737 has landed =) Yes, but I noticed some issues that I'm trying to fix.
Adrian Perez
Comment 7 2022-01-11 13:13:08 PST
(In reply to Carlos Garcia Campos from comment #6) > (In reply to Adrian Perez from comment #5) > > This needs a rebase now that the patch for bug #234737 has landed =) > > Yes, but I noticed some issues that I'm trying to fix. Awesome, thanks!
Carlos Garcia Campos
Comment 8 2022-01-12 01:47:35 PST
Adrian Perez
Comment 9 2022-01-12 03:31:35 PST
Comment on attachment 448916 [details] Patch Patch LGTM with a small nit to fix before landing 👍️ View in context: https://bugs.webkit.org/attachment.cgi?id=448916&action=review > Source/WebCore/accessibility/atspi/AccessibilityAtspi.cpp:-29 > -#include <wtf/NeverDestroyed.h> Do not remove the line for <wtf/NeverDestroyed.h>, because it will break non-unified builds.
Carlos Garcia Campos
Comment 10 2022-01-12 04:02:37 PST
Note You need to log in before you can comment on or make changes to this bug.