[GTK][a11y] Defer the emission of AddAccessible signal with ATSPI https://bugs.webkit.org/show_bug.cgi?id=234740

Reviewed by Adrian Perez de Castro.

In case of node added and removed quickly, we just avoid the emission of the signal.

* accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::attachWrapper): Notify the root about its new child earlier to ensure the isolated tree
is created as soon as possible.
(WebCore::AXObjectCache::platformPerformDeferredCacheUpdate): Remove the root case from here.
* accessibility/atspi/AccessibilityAtspi.cpp:
(WebCore::AccessibilityAtspi::parentChanged): Ensure object is cached before emitting the signal.
(WebCore::AccessibilityAtspi::childrenChanged): Ditto.
(WebCore::AccessibilityAtspi::stateChanged): Ditto.
(WebCore::AccessibilityAtspi::textChanged): Ditto.
(WebCore::AccessibilityAtspi::textAttributesChanged): Ditto.
(WebCore::AccessibilityAtspi::textCaretMoved): Ditto.
(WebCore::AccessibilityAtspi::textSelectionChanged): Ditto.
(WebCore::AccessibilityAtspi::valueChanged): Ditto.
(WebCore::AccessibilityAtspi::selectionChanged): Ditto.
(WebCore::AccessibilityAtspi::loadEvent): Ditto.
(WebCore::AccessibilityAtspi::addToCacheIfNeeded): Helper to add an object to the cache and emit AddAccessible signal.
(WebCore::AccessibilityAtspi::cacheUpdateTimerFired): Update the cache with pending adds.
(WebCore::AccessibilityAtspi::scheduleCacheUpdate): Create the update cache timer if needed and schedule an
update if there isn't a pending one already.
(WebCore::AccessibilityAtspi::addAccessible): Add object to the list and schedule a cache update.
(WebCore::AccessibilityAtspi::removeAccessible): Return early if the object is in the update cache list.
* accessibility/atspi/AccessibilityAtspi.h:
* accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::registerObject): Remove the call to AccessibilityRootAtspi::child() when an
object is registered before being attached to the isolated object.
* accessibility/atspi/AccessibilityRootAtspi.cpp:
(WebCore::AccessibilityRootAtspi::child const): Set m_isInChild.
(WebCore::AccessibilityRootAtspi::childAdded): Return early if the given child is not the current one or called
from child().
* accessibility/atspi/AccessibilityRootAtspi.h:


Canonical link: https://commits.webkit.org/245951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287918 268f45cc-cd09-0410-ab3c-d52691b4dbfc