Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp
@@ -35,10 +35,18 @@ namespace WebCore {
 
 void AXObjectCache::attachWrapper(AXCoreObject* axObject)
 {
-    auto wrapper = AccessibilityObjectAtspi::create(axObject, document().page()->accessibilityRootObject());
+    auto* atspiRoot = document().page()->accessibilityRootObject();
+    auto wrapper = AccessibilityObjectAtspi::create(axObject, atspiRoot);
     axObject->setWrapper(wrapper.ptr());
 
+    // Handle the root earlier here, since we know it only has one child.
+    if (!axObject->parentObjectUnignored() && axObject->isScrollView() && axObject->scrollView() == document().view() && atspiRoot) {
+        wrapper->setParent(nullptr); // nullptr means root.
+        return;
+    }
+
     m_deferredParentChangedList.add(axObject);
+    m_performCacheUpdateTimer.startOneShot(0_s);
 }
 
 void AXObjectCache::platformPerformDeferredCacheUpdate()
@@ -49,11 +57,8 @@ void AXObjectCache::platformPerformDeferredCacheUpdate()
             return;
 
         auto* axParent = axObject.parentObjectUnignored();
-        if (!axParent) {
-            if (axObject.isScrollView() && axObject.scrollView() == document().view())
-                wrapper->setParent(nullptr); // nullptr parent means root.
+        if (!axParent)
             return;
-        }
 
         if (auto* axParentWrapper = axParent->wrapper())
             wrapper->setParent(axParentWrapper);
