Source/WebCore/accessibility/atspi/AccessibilityAtspi.cpp
@@ -27,7 +27,6 @@
 #include <glib/gi18n-lib.h>
 #include <wtf/MainThread.h>
 #include <wtf/NeverDestroyed.h>
-#include <wtf/SetForScope.h>
 #include <wtf/SortedArrayMap.h>
 #include <wtf/UUID.h>
 
@@ -357,6 +356,8 @@ void AccessibilityAtspi::parentChanged(AccessibilityObjectAtspi& atspiObject)
         if (atspiObject->registerObject())
             return;
 
+        addToCacheIfPending(atspiObject.get());
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "PropertyChange",
             g_variant_new("(siiva{sv})", "accessible-parent", 0, 0, atspiObject->parentReference(), nullptr), nullptr);
     });
@@ -388,6 +389,9 @@ void AccessibilityAtspi::childrenChanged(AccessibilityObjectAtspi& atspiObject, 
         if (!atspiObject->isTreeRegistered())
             return;
 
+        addToCacheIfPending(atspiObject.get());
+        addToCacheIfPending(child.get());
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "ChildrenChanged",
             g_variant_new("(siiv(so))", change == ChildrenChanged::Added ? "add" : "remove", child->indexInParentForChildrenChanged(change),
             0, g_variant_new("(so)", uniqueName(), child->path().utf8().data()), uniqueName(), atspiObject->path().utf8().data()), nullptr);
@@ -401,6 +405,8 @@ void AccessibilityAtspi::childrenChanged(AccessibilityRootAtspi& rootObject, Acc
     m_queue->dispatch([this, rootObject = Ref { rootObject }, child = Ref { child }, change] {
         if (!m_connection)
             return;
+
+        addToCacheIfPending(child.get());
 
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, rootObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "ChildrenChanged",
             g_variant_new("(siiv(so))", change == ChildrenChanged::Added ? "add" : "remove", 0,
@@ -423,6 +429,8 @@ void AccessibilityAtspi::stateChanged(AccessibilityObjectAtspi& atspiObject, con
         if (!shouldEmitSignal("Object", "StateChanged", name.data()))
             return;
 
+        addToCacheIfPending(atspiObject);
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "StateChanged",
             g_variant_new("(siiva{sv})", name.data(), value, 0, g_variant_new_string("0"), nullptr), nullptr);
     });
@@ -443,6 +451,8 @@ void AccessibilityAtspi::textChanged(AccessibilityObjectAtspi& atspiObject, cons
         if (!shouldEmitSignal("Object", "TextChanged", changeType.data()))
             return;
 
+        addToCacheIfPending(atspiObject);
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "TextChanged",
             g_variant_new("(siiva{sv})", changeType.data(), offset, length, g_variant_new_string(text.data()), nullptr), nullptr);
     });
@@ -457,6 +467,8 @@ void AccessibilityAtspi::textAttributesChanged(AccessibilityObjectAtspi& atspiOb
 
         if (!shouldEmitSignal("Object", "TextAttributesChanged"))
             return;
+
+        addToCacheIfPending(atspiObject);
 
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "TextAttributesChanged",
             g_variant_new("(siiva{sv})", "", 0, 0, g_variant_new_string(""), nullptr), nullptr);
@@ -478,6 +490,8 @@ void AccessibilityAtspi::textCaretMoved(AccessibilityObjectAtspi& atspiObject, u
         if (!shouldEmitSignal("Object", "TextCaretMoved"))
             return;
 
+        addToCacheIfPending(atspiObject);
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "TextCaretMoved",
             g_variant_new("(siiva{sv})", "", caretOffset, 0, g_variant_new_string(""), nullptr), nullptr);
     });
@@ -492,6 +506,8 @@ void AccessibilityAtspi::textSelectionChanged(AccessibilityObjectAtspi& atspiObj
 
         if (!shouldEmitSignal("Object", "TextSelectionChanged"))
             return;
+
+        addToCacheIfPending(atspiObject);
 
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "TextSelectionChanged",
             g_variant_new("(siiva{sv})", "", 0, 0, g_variant_new_string(""), nullptr), nullptr);
@@ -513,6 +529,8 @@ void AccessibilityAtspi::valueChanged(AccessibilityObjectAtspi& atspiObject, dou
         if (!shouldEmitSignal("Object", "PropertyChange", "accessible-value"))
             return;
 
+        addToCacheIfPending(atspiObject);
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "PropertyChange",
             g_variant_new("(siiva{sv})", "accessible-value", 0, 0, g_variant_new_double(value), nullptr), nullptr);
     });
@@ -533,6 +551,8 @@ void AccessibilityAtspi::selectionChanged(AccessibilityObjectAtspi& atspiObject)
         if (!shouldEmitSignal("Object", "SelectionChanged"))
             return;
 
+        addToCacheIfPending(atspiObject);
+
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Object", "SelectionChanged",
             g_variant_new("(siiva{sv})", "", 0, 0, g_variant_new_string(""), nullptr), nullptr);
     });
@@ -552,6 +572,8 @@ void AccessibilityAtspi::loadEvent(AccessibilityObjectAtspi& atspiObject, CStrin
 
         if (!shouldEmitSignal("Document", event.data()))
             return;
+
+        addToCacheIfPending(atspiObject);
 
         g_dbus_connection_emit_signal(m_connection.get(), nullptr, atspiObject->path().utf8().data(), "org.a11y.atspi.Event.Document", event.data(),
             g_variant_new("(siiva{sv})", "", 0, 0, g_variant_new_string(""), nullptr), nullptr);
@@ -706,7 +728,6 @@ GDBusInterfaceVTable AccessibilityAtspi::s_cacheFunctions = {
         RELEASE_ASSERT(!isMainThread());
         if (!g_strcmp0(methodName, "GetItems")) {
             auto& atspi = *static_cast<AccessibilityAtspi*>(userData);
-            SetForScope<bool> inGetItems(atspi.m_inGetItems, true);
             GVariantBuilder builder = G_VARIANT_BUILDER_INIT(G_VARIANT_TYPE("(" GET_ITEMS_SIGNATURE ")"));
             g_variant_builder_open(&builder, G_VARIANT_TYPE(GET_ITEMS_SIGNATURE));
             for (auto* rootObject : atspi.m_rootObjects.keys()) {
@@ -728,6 +749,7 @@ GDBusInterfaceVTable AccessibilityAtspi::s_cacheFunctions = {
                 wrapper->serialize(&builder);
                 g_variant_builder_close(&builder);
             }
+
             g_variant_builder_close(&builder);
             g_dbus_method_invocation_return_value(invocation, g_variant_builder_end(&builder));
         }
@@ -752,17 +774,15 @@ void AccessibilityAtspi::ensureCache()
     m_cacheID = g_dbus_connection_register_object(m_connection.get(), "/org/a11y/atspi/cache", const_cast<GDBusInterfaceInfo*>(&webkit_cache_interface), &s_cacheFunctions, this, nullptr, nullptr);
 }
 
-void AccessibilityAtspi::addAccessible(AccessibilityObjectAtspi& atspiObject)
+void AccessibilityAtspi::addToCacheIfNeeded(AccessibilityObjectAtspi& atspiObject)
 {
     RELEASE_ASSERT(!isMainThread());
-    if (!m_connection)
+    atspiObject.updateBackingStore();
+    if (atspiObject.isDefunct())
         return;
 
     auto addResult = m_cache.add(atspiObject.path(), &atspiObject);
     if (!addResult.isNewEntry)
-        return;
-
-    if (m_inGetItems)
         return;
 
     GVariantBuilder builder = G_VARIANT_BUILDER_INIT(G_VARIANT_TYPE("(" ITEM_SIGNATURE ")"));
@@ -771,11 +791,52 @@ void AccessibilityAtspi::addAccessible(AccessibilityObjectAtspi& atspiObject)
         g_variant_new("(@(" ITEM_SIGNATURE "))", g_variant_builder_end(&builder)), nullptr);
 }
 
+void AccessibilityAtspi::addToCacheIfPending(AccessibilityObjectAtspi& atspiObject)
+{
+    if (!m_cacheUpdateList.remove(&atspiObject))
+        return;
+
+    addToCacheIfNeeded(atspiObject);
+    if (m_cacheUpdateTimer && m_cacheUpdateList.isEmpty())
+        m_cacheUpdateTimer = nullptr;
+}
+
+void AccessibilityAtspi::cacheUpdateTimerFired()
+{
+    while (!m_cacheUpdateList.isEmpty())
+        addToCacheIfNeeded(*m_cacheUpdateList.takeFirst());
+}
+
+void AccessibilityAtspi::scheduleCacheUpdate()
+{
+    RELEASE_ASSERT(!isMainThread());
+    if (!m_cacheUpdateTimer)
+        m_cacheUpdateTimer = makeUnique<RunLoop::Timer<AccessibilityAtspi>>(RunLoop::current(), this, &AccessibilityAtspi::cacheUpdateTimerFired);
+
+    if (!m_cacheUpdateTimer->isActive())
+        m_cacheUpdateTimer->startOneShot(0_s);
+}
+
+void AccessibilityAtspi::addAccessible(AccessibilityObjectAtspi& atspiObject)
+{
+    RELEASE_ASSERT(!isMainThread());
+    if (!m_connection)
+        return;
+
+    m_cacheUpdateList.add(&atspiObject);
+    scheduleCacheUpdate();
+}
+
 void AccessibilityAtspi::removeAccessible(AccessibilityObjectAtspi& atspiObject)
 {
     RELEASE_ASSERT(!isMainThread());
+    if (m_cacheUpdateList.remove(&atspiObject))
+        return;
+
     const auto& path = atspiObject.path();
-    m_cache.remove(path);
+    if (!m_cache.remove(path))
+        return;
+
     g_dbus_connection_emit_signal(m_connection.get(), nullptr, "/org/a11y/atspi/cache", "org.a11y.atspi.Cache", "RemoveAccessible",
         g_variant_new("((so))", uniqueName(), path.utf8().data()), nullptr);
 }
